--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:tG7MrGoZvR+mtSl+sCZXEQ==,iv:HhIW7Juo3RDqkcFza/MkuJzxCfB8/p5h/slmFvQ/ji0=,tag:wbBL93GPT5xOsGu34VwzLw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:UDfkMxV3rS8StBcvjFLB3X2SwY/qoa5U/gJcEfmSum9yfdpA,iv:KMqOSXT6CrJUoSNXvhPDGxMHuh4H820Ad3bT9q17uBc=,tag:Q2UovalwjZyJK3z73bOPhQ==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:xGkDatz99YhBUT4=,iv:/uGoum9EccBaFjZcxDL7D2CVWLBsL3vP+c2rQs4zK10=,tag:z8vk5ERGgsph9Uhux9UXiw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:jOnI1LOlgJwrHYWnNHbhYA==,iv:g96d8DzpQVKl/8yl6asd+6FzlcKVpnZMOzaW968FIf4=,tag:GoTFNnZefmJ/NaPd4gS0Og==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:I8icYUhSmzq4erjZJ0odD5hv52JWIv0NnyaRAtctElatipA7,iv:s7Bf+yRHq3ee+Nc4s6x7Jid3vd7WzVHCUgi7D3oN9KY=,tag:YRmmCvgxS4FImiG1actHzA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:fRv/iyAamraUXDU=,iv:5OI3eK1EizPKmlT2SGYn1QqibRCdPyUhW3b8uiDVJgs=,tag:xFTv27KEzRBWnPjUfNZB2A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4dy92TDk3MUlYQUN0RFNS
-            RldJOUpacmVma0VCcVNSaUIzKzVwcWtCMVQ0CnpWZmNGeWVxSVVSeVBPQm1wWmt5
-            NW84a0NkZDBuazVoOTFzalFiQlFvTkkKLS0tIEthazhKZVFFZXNNY2w1ZFdQRW1X
-            Q0VWVVFXRDNKV2Q5RHBHblpja1kxU00K2s6Z0On3DoJ5fyIzDA33kgEcTYIO1SCL
-            7fS7x3AOaf9/OuQA8ek4YFtWH2o2WJbJ89yXFSSik35VOyeOSxyeew==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByZmFRSFc5WFpMUUM5OURI
+            bWNIRVBILzNvS3NjZEpoOTUwdld6czVhL3hRCnZyT0NhOEZxc01JZ0lacXdPZW0x
+            Wm9ROUJub2pjd241VCt2R09rU0gxTkUKLS0tIDlYQVRiNmFtWHZ4YVVHMHdPc3dV
+            a0NPZG95TmpzVldJa1FvSHoySnVoYmcKf6hO2wXMYGf8p3d9KB/FH5/+vem5zelu
+            dxZOYTwilevxcS15xuO1P2TpJYIviqAeupT6Izh1bndTDfY+OluzGA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T01:14:27Z"
-    mac: ENC[AES256_GCM,data:qcsPgnceR3ez39O+QdjDWggXBDVCluVlq2LnPI1FC+ecUmwjxXKYuE5LuE3Wu1gvAX+m2KOTr+ytN6yPdwIi9hAr8PDSNyaKepBCeguC0TJE0z2wdbx563Xgh8Ig2ULsEWU/1vcJjrqWtKGO4wiER/83VugBwDxKsUaLWJQf5Qs=,iv:SxF741+Ol1nyyS4YhrBFin0G5m+q4RQVfqpkJS4puAo=,tag:W7c5SxuJ0eqj/BSuwU5aSg==,type:str]
+    lastmodified: "2023-10-10T02:01:17Z"
+    mac: ENC[AES256_GCM,data:0BZ8FlMq4BgcC+qMLPUXiErVrqn18P744OWkmLXavPbBuYIzPFYxQHqSZ0Pgei5VOVyU8Hqc5B1VFsN1GbdX81HIA9FpmU3eAheP17MIYYAMwsn8JdArTDKFsOL2pKvp2ZiwwSWOCDc054QtgJGiByDF2R9Qh4k5Fzwue8RcBfk=,iv:UflF0ChwjBmaYEHbqeqYnMoZMYCIAeFbgDhye5KHiQ4=,tag:zFBslxOoM6AUBM3dO4qUkw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
