--- a/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
@@ -3,9 +3,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: external-secrets
-  namespace: kube-system
+  namespace: external-secrets
 spec:
-  interval: 30m
+  interval: 15m
   chart:
     spec:
       chart: external-secrets
@@ -14,27 +14,22 @@ spec:
         kind: HelmRepository
         name: external-secrets
         namespace: flux-system
-  maxHistory: 2
+  maxHistory: 3
   install:
     remediation:
       retries: 3
   upgrade:
-    cleanupOnFail: true
     remediation:
       retries: 3
-  uninstall:
-    keepHistory: false
   values:
     installCRDs: true
-    replicaCount: 2
+    replicaCount: 3
+    leaderElect: true
     serviceMonitor:
       enabled: true
-      interval: 1m
     webhook:
       serviceMonitor:
         enabled: true
-        interval: 1m
     certController:
       serviceMonitor:
         enabled: true
-        interval: 1m
