--- a/kubernetes/apps/external-secrets/onepassword-connect/app/clustersecretstore.yaml
+++ b/kubernetes/apps/external-secrets/onepassword-connect/app/clustersecretstore.yaml
@@ -3,7 +3,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: onepassword-connect
-  namespace: kube-system
+  namespace: external-secrets
 spec:
   provider:
     onepassword:
@@ -15,4 +15,4 @@ spec:
           connectTokenSecretRef:
             name: onepassword-connect-token
             key: token
-            namespace: kube-system
+            namespace: external-secrets
