--- a/kubernetes/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: onepassword-connect
-  namespace: kube-system
+  namespace: external-secrets
 spec:
   interval: 15m
   chart:
@@ -93,3 +93,4 @@ spec:
         memory: 10Mi
       limits:
         memory: 100Mi
+
