--- a/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
@@ -26,6 +26,7 @@ spec:
       main:
         annotations:
           reloader.stakater.com/auto: "true"
+          setGateway: "true"
 
         pod:
           securityContext:
