--- a/kubernetes/apps/vpn/pod-gateway/app/externalsecret.yaml
+++ b/kubernetes/apps/vpn/pod-gateway/app/externalsecret.yaml
@@ -2,15 +2,15 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: nord
+  name: mullvad
   namespace: vpn
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: nord-secret
+    name: mullvad-secret
     creationPolicy: Owner
   dataFrom:
     - extract:
-        key: nord
+        key: mullvad
