--- a/kubernetes/apps/vpn/pod-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/vpn/pod-gateway/app/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
           tag: v3.35.0
         env:
           - name: VPN_SERVICE_PROVIDER
-            value: custom
+            value: mullvad
           - name: VPN_TYPE
             value: wireguard
           - name: VPN_INTERFACE
@@ -59,6 +59,10 @@ spec:
             value: 30s
           #- name: WIREGUARD_ADDRESSES
           #  value: "10.5.0.2/32"
+          - name: SERVER_CITIES
+            value: Atlanta GA
+          - name: SERVER_HOSTNAMES
+            value: us167-wireguard
           - name: LOG_LEVEL
             value: debug
           - name: VPN_ENDPOINT_PORT
