--- a/kubernetes/apps/vpn/pod-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/vpn/pod-gateway/app/helmrelease.yaml
@@ -61,8 +61,8 @@ spec:
           #  value: "10.5.0.2/32"
           - name: SERVER_CITIES
             value: Atlanta GA
-          - name: SERVER_HOSTNAMES
-            value: us167-wireguard
+#         - name: SERVER_HOSTNAMES
+#           value: us167-wireguard
           - name: LOG_LEVEL
             value: debug
           - name: VPN_ENDPOINT_PORT
