--- a/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
@@ -67,7 +67,9 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "internal-nginx"
+        className: "external"
+        annotations:
+          external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
         hosts:
           - host: &host "sonarr.${SECRET_DOMAIN}"
             paths:
