--- a/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
@@ -52,13 +52,18 @@ spec:
             envFrom:
               - secretRef:
                   name: sonarr-secret
-
             resources:
               requests:
                 cpu: 20m
                 memory: 323M
               limits:
                 memory: 323M
+          netshoot:
+            image:
+              repository: ghcr.io/nicolaka/netshoot
+              tag: v0.11
+          command: ["/bin/bash"]
+          args: ["-c", "while true; do ping localhost; sleep 60;done"]
 
     service:
       main:
