--- a/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
@@ -24,19 +24,16 @@ spec:
   values:
     controllers:
       main:
+        type: statefulset
         annotations:
           reloader.stakater.com/auto: "true"
-          setGateway: "true"
 
-        label:
-          setGateway: "true"
         pod:
           securityContext:
             runAsUser: 568
-            runAsGroup: 568
-            fsGroup: 568
+            runAsGroup: 100   # was 568 before app template upgrade
+            fsGroup: 100
             fsGroupChangePolicy: "OnRootMismatch"
-
         containers:
           main:
             image:
@@ -58,12 +55,12 @@ spec:
                 memory: 323M
               limits:
                 memory: 323M
-          netshoot:
-            image:
-              repository: ghcr.io/nicolaka/netshoot
-              tag: v0.11
-          command: ["/bin/bash"]
-          args: ["-c", "while true; do ping localhost; sleep 60;done"]
+#         netshoot:
+#           image:
+#             repository: ghcr.io/nicolaka/netshoot
+#             tag: v0.11
+#         command: ["/bin/bash"]
+#         args: ["-c", "while true; do ping localhost; sleep 60;done"]
 
     service:
       main:
