--- a/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
@@ -57,12 +57,12 @@ spec:
                 memory: 323M
               limits:
                 memory: 323M
-#         netshoot:
-#           image:
-#             repository: ghcr.io/nicolaka/netshoot
-#             tag: v0.11
-#         command: ["/bin/bash"]
-#         args: ["-c", "while true; do ping localhost; sleep 60;done"]
+          netshoot:
+            image:
+              repository: ghcr.io/nicolaka/netshoot
+              tag: v0.11
+            command: ["/bin/bash"]
+            args: ["-c", "while true; do ping localhost; sleep 60;done"]
 
     service:
       main:
