--- a/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/sonarr/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
   values:
     controllers:
       main:
-        type: statefulset
+#       type: statefulset
         annotations:
           reloader.stakater.com/auto: "true"
 
