--- a/kubernetes/apps/organizers/lidarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/lidarr/app/helmrelease.yaml
@@ -42,11 +42,11 @@ spec:
               repository: ghcr.io/bh2754/lidarr-develop
               tag: 1.4.5.3639@sha256:db559a9aa6a00dff923f798a91111a6d76760d2bc92282ad99416c1c9350c780
             env:
-              LIDARR__INSTANCE_NAME: Sonarr
+              LIDARR__INSTANCE_NAME: Lidarr
               LIDARR__PORT: &port 8686
 #             LIDARR__AUTHENTICATION_METHOD: External
-              LIDARR__AUTHENTICATION_REQUIRED: DisabledForLocalAddresses
-              LIDARR__APPLICATION_URL: "https://lidarr.${SECRET_DOMAIN}"
+#             LIDARR__AUTHENTICATION_REQUIRED: DisabledForLocalAddresses
+#             LIDARR__APPLICATION_URL: "https://lidarr.${SECRET_DOMAIN}"
               LIDARR__LOG_LEVEL: info
             envFrom:
               - secretRef:
