--- a/kubernetes/apps/organizers/lidarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/lidarr/app/helmrelease.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
       chart: app-template
-      version: 1.5.1
+      version: 2.0.3
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -24,29 +24,49 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: ghcr.io/bh2754/lidarr-nightly
-      tag: 1.5.0.3654@sha256:6ed533b3726452abc2952a0eb9f5a50d2a3f3a6e7c9be736bec034ec7ca2dc52
-      pullPolicy: IfNotPresent
-    env:
-      TZ: ${TZ}
-    envFrom:
-      - secretRef:
-        # name: *app
-          name: lidarr-secret
-
+    controllers:
+      main:
+        type: deployment
+        strategy: Recreate
+        annotations:
+          reloader.stakater.com/auto: "true"
+        pod:
+          annotations:
+            setGateway: "true"
+          securityContect:
+            runAsUser: 568
+            runAsGroup: 100   # was 568 before app template upgrade
+            fsGroup: 100
+            fsGroupChangePolicy: "OnRootMismatch" 
+        containers:
+          main:
+            image:
+              repository: ghcr.io/bh2754/lidarr-nightly
+              tag: 1.5.0.3654@sha256:6ed533b3726452abc2952a0eb9f5a50d2a3f3a6e7c9be736bec034ec7ca2dc52
+              pullPolicy: IfNotPresent
+            env:
+              TZ: ${TZ}
+              LIDARR__INSTANCE_NAME: Lidarr
+              LIDARR__PORT: &port 8686
+              LIDARR__LOG_LEVEL: info
+            envFrom:
+              - secretRef:
+                  name: lidarr-secret
+            resources:
+              requests:
+                cpu: 10m
+                memory: 1102M
+                ephemeral-storage: "2Gi"
+              limits:
+                memory: 1428M
+                ephemeral-storage: "4Gi"
     service:
       main:
         ports:
           http:
-            port: 8686
+            port: *port
     metrics:
       enabled: false
-    podSecurityContext:
-      runAsUser: 568
-      runAsGroup: 568
-      fsGroup: 568
-      fsGroupChangePolicy: OnRootMismatch
     persistence:
       config:
         enabled: true
@@ -71,7 +91,9 @@ spec:
           - host: &host "lidarr.${SECRET_DOMAIN}"
             paths:
               - path: /
-                pathType: Prefix
+                service:
+                  name: main
+                  prot: http
         tls:
           - hosts:
               - *host
@@ -83,5 +105,3 @@ spec:
       limits:
         memory: 1428M
         ephemeral-storage: "4Gi"
-    podAnnotations:
-      setGateway: "true"
