--- a/kubernetes/apps/organizers/lidarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/lidarr/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
             runAsUser: 568
             runAsGroup: 100   # was 568 before app template upgrade
             fsGroup: 100
-            fsGroupChangePolicy: "OnRootMismatch" 
+            fsGroupChangePolicy: "OnRootMismatch"
         containers:
           main:
             image:
@@ -84,7 +84,7 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: "external"
+        className: "external"
         annotations:
           external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
         hosts:
