--- a/kubernetes/apps/organizers/readarr/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/readarr/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
     controllers:
       main:
         type: deployment
-        strategy: recreate
+        strategy: Recreate
         annotations:
           reloader.stakater.com/auto: "true"
 
