--- a/kubernetes/apps/organizers/readarr-audio/app/externalsecret.yaml
+++ b/kubernetes/apps/organizers/readarr-audio/app/externalsecret.yaml
@@ -2,14 +2,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: readarr
+  name: readarr-audio
   namespace: organizers
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: readarr-secret
+    name: readarr-audio-secret
     creationPolicy: Owner
     template:
       engineVersion: v2
@@ -17,4 +17,4 @@ spec:
         READARR__API_KEY: "{{ .READARR__API_KEY }}"
   dataFrom:
     - extract:
-        key: readarr
+        key: readarr-audio
