--- a/kubernetes/apps/organizers/readarr-audio/app/helmrelease.yaml
+++ b/kubernetes/apps/organizers/readarr-audio/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app readarr
+  name: &app readarr-audio
   namespace: organizers
 spec:
   interval: 15m
@@ -42,7 +42,7 @@ spec:
               repository: ghcr.io/bh2754/readarr-nightly
               tag: 0.3.7.2260@sha256:7520677b7643097a8090ee8fe5fb1449d1307ff4966a21354bfce7b07e19edbe
             env:
-              READARR__INSTANCE_NAME: Readarr
+              READARR__INSTANCE_NAME: READARR-AUDIO
               READARR__PORT: &port 80
 #             READARR__AUTHENTICATION_METHOD: External
 #             READARR__AUTHENTICATION_REQUIRED: DisabledForLocalAddresses
@@ -50,7 +50,7 @@ spec:
               READARR__LOG_LEVEL: info
             envFrom:
               - secretRef:
-                  name: readarr-secret
+                  name: readarr-audio-secret
             resources:
               requests:
                 cpu: 20m
@@ -77,7 +77,7 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
         hosts:
-          - host: &host "readarr.${SECRET_DOMAIN}"
+          - host: &host "abs.${SECRET_DOMAIN}"
             paths:
               - path: /
                 service:
@@ -90,13 +90,13 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: readarr-config-v1
+        existingClaim: readarr-audio-config-v1
       books:
         enabled: true
         type: nfs
         server: &nas "${NFS_SERVER}"
-        path: ${NFS_BOOKS}
-        mountPath: /media
+        path: ${NFS_MEDIA}/audiobooks
+        mountPath: /audiobooks
       downloads:
         enabled: true
         type: nfs
