--- a/kubernetes/apps/organizers/kustomization.yaml
+++ b/kubernetes/apps/organizers/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./lidarr/ks.yaml
+  - ./prowlarr/ks.yaml
   - ./sonarr/ks.yaml
   - ./radarr/ks.yaml
   - ./readarr/ks.yaml
