--- a/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+kind: HelmRelease  #
 metadata:
   name: echo-server
   namespace: networking
