--- a/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
   values:
     controllers:
       main:
+        strategy: Recreate
         containers:
           main:
             image:
