--- a/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
@@ -51,8 +51,9 @@ spec:
     ingress:
       main:
         enabled: true
-        primary: true
-        className: nginx
+        className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
         hosts:
           - host: &host echo-server.${SECRET_DOMAIN_1}
             paths:
