--- a/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/echo-server/app/helmrelease.yaml
@@ -27,35 +27,47 @@ spec:
   values:
     controllers:
       main:
-        strategy: Recreate
+        strategy: RollingUpdate
         containers:
           main:
             image:
-              repository: ghcr.io/mendhak/http-https-echo
-              tag: 30
+              repository: docker.io/jmalloc/echo-server
+              tag: 0.3.5
             resources:
               requests:
                 cpu: 5m
-                memory: 30Mi
+                memory: 10Mi
               limits:
-                memory: 30Mi
-            env:
-              HTTP_PORT: 8080
-              LOG_WITHOUT_NEWLINE: "true"
-              LOG_IGNORE_PATH: /healthz
+                memory: 50Mi
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /health
+                    port: &port 8080
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+              startup:
+                enabled: false
     service:
       main:
         ports:
           http:
-            port: 8080
+            port: *port
     ingress:
       main:
         enabled: true
         className: external
         annotations:
-          external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "border.ok8.sh"
+          hajimari.io/icon: video-input-antenna
         hosts:
-          - host: &host echo-server.${SECRET_DOMAIN_1}
+          - host: &host "{{ .Release.Name }}.ok8.sh"
             paths:
               - path: /
                 pathType: Prefix
