--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   flux-diff:
     name: Flux Diff
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20230924.1.0
     permissions:
       contents: read
       pull-requests: write
