--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   flux-diff:
     name: Flux Diff
-    runs-on: jammy-20230916
+    runs-on: ubuntu-20230924
     permissions:
       contents: read
       pull-requests: write
