--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   flux-diff:
     name: Flux Diff
-    runs-on: ubuntu-20230924
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
@@ -19,11 +19,12 @@ jobs:
         resource: ["helmrelease", "kustomization"]
     steps:
       - name: Generate Token
-        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
+        uses: tibdex/github-app-token@v2
         id: generate-token
         with:
           app_id: "${{ secrets.BOT_APP_ID }}"
           private_key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+          
       - name: Diff Resources
         uses: allenporter/flux-local/action/diff@efbe055c6dc2a63d1102db582632d2aa03696664 # 3.1.1
         id: diff
