--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -31,11 +31,13 @@ spec:
             fsGroupChangePolicy: "OnRootMismatch"
         initContainers:
           01-init-db:
-            image: ghcr.io/onedr0p/postgres-init:14.8
-            imagePullPolicy: IfNotPresent
-            envFrom: &envFrom
-              - secretRef:
-                  name: authelia-secret
+            image:
+              repository: ghcr.io/onedr0p/postgres-initdb
+              tag: 14.8
+              imagePullPolicy: IfNotPresent
+              envFrom: &envFrom
+                - secretRef:
+                    name: authelia-secret
         containers:
           main:
             image:
